--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,15 @@
-log4j.rootLogger=FILE
-#Define rolling file appender
-log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.File=D:/logs/main.log
-log4j.appender.FILE.Append=true
-log4j.appender.FILE.ImmediateFlush=true
-log4j.appender.FILE.MaxFileSize=10MB
-log4j.appender.FILE.MaxBackupIndex=5
-log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.ConversionPattern=%d %d{Z} [%t] %-5p (%F:%L) - %m%n
+# Root logger
+log4j.rootLogger=INFO, file, stdout
+
+# Direct to a file
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=D:\\Baeldung\\app.log
+log4j.appender.file.MaxFileSize=5KB
+log4j.appender.file.MaxBackupIndex=2
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+# Direct to console
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd'T'HH:mm:ss.SSS} %-5p [%c] - %m%n
