--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,6 @@
             <version>1.18.34</version>
             <scope>provided</scope>
         </dependency>
-        <!--<dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-            <version>2.2.1</version>
-        </dependency>-->
         <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ucp -->
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
@@ -76,7 +71,7 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
-            <version>2.5.1</version>
+            <version>2.7.4</version>
         </dependency>
         <!--<dependency>
             <groupId>org.hibernate</groupId>
@@ -88,12 +83,26 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.6.0.Final</version>
         </dependency>-->
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/mysql/mysql-connector-java &ndash;&gt;
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
+        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <!--<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.0.8</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
